# stitch-studio

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PRD.md  README.md
.claude/: settings.json  startup.sh
.claude/scripts/: post-lint.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml
docs/: HARVEST.md  screens.md  use-cases.md
docs/adr/: 0001-rust-wasm-for-image-processing.md
frontend/: biome.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/__tests__/: dmc-colors.test.ts  useEditorState.test.ts
frontend/src/__tests__/components/: App.test.tsx  ColorPalette.test.tsx  GridCanvas.test.tsx  ImportDialog.test.tsx  ThreadList.test.tsx
frontend/src/__tests__/types/: grid.test.ts
frontend/src/components/: ColorPalette.tsx  GridCanvas.tsx  ImportDialog.tsx  Modal.tsx  ThreadList.tsx
frontend/src/hooks/: useEditorState.ts
frontend/src/types/: grid.ts
frontend/src/utils/: dmc-colors.ts
frontend/src/wasm-pkg/: package.json  stitch_studio_wasm.d.ts  stitch_studio_wasm.js  stitch_studio_wasm_bg.wasm  stitch_studio_wasm_bg.wasm.d.ts
wasm/: Cargo.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
wasm/src/: lib.rs
